Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month=\"January\" # \"January\""
+    "travel_month=\"January\" # \"January\"\n"
    ]
   },
   {
@@ -87,7 +87,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "number_of_weeks = None"
@@ -96,10 +98,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "number_of_weeks=3 # 3"
+    "number_of_weeks # 3"
    ]
   },
   {
@@ -112,10 +116,12 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "number_of_weeks=5 # 5"
+    "number_of_weeks # 5"
    ]
   },
   {
