--- a/index.ipynb
+++ b/index.ipynb
@@ -70,11 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "travel_month=\"January\" # \"January\""
+    "travel_month=\"January\" # \"January\"\n",
+    "travel_month"
    ]
   },
   {
@@ -115,7 +127,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks=5 # 5"
+    "number_of_weeks=5 # 5\n",
+    "number_of_week"
    ]
   },
   {
